# vcclient-cli

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/: DirectRVCWrapper.py  main.py  utils.py
src/inputs/: DeviceInput.py  DiscordInput.py  FFmpegInput.py  Input.py  OggOpusInput.py  ProcessInput.py  RtpOpusInput.py  WavFileInput.py
src/outputs/: DeviceOutput.py  DiscordOutput.py  FFmpegOutput.py  Output.py  ProcessOutput.py  WavFileOutput.py
