[project]
name = "vcclient-cli"
version = "0.1.0"
description = "Voice changing application based on VCClient (w-okada/voice-changer)"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
dependencies = [
    "numpy==2.2.6",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "resampy==0.4.3",
    "onnxruntime-gpu==1.23.2",
    "scipy==1.15.3",
    "faiss-cpu==1.13.2",
    "torchcrepe==0.0.24",
    "librosa==0.11.0",
    "local_attention==1.11.2",
    "einops==0.8.2",
    "torchfcpe==0.0.3",
    "fairseq==0.12.2",
    "onnxsim==0.6.3",
    "pyworld==0.3.5",
]

[project.optional-dependencies]
